# bulletin_backend

./: .cursorrules  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.specstory/history/: 2025-03-07_13-23-fastapi-프로젝트-설정-및-구성.md  2025-03-07_14-38-온라인-주보-관리-시스템-설계.md  2025-03-07_15-26-fastapi-session-management-and-jwt-implementation.md  2025-03-10_14-24-fixing-alembic-column-addition-error.md  2025-03-13_10-10-프론트엔드와-백엔드-연결-로그인-기능-구현.md  2025-03-13_14-24-교회-관리-시스템-요구사항-정리.md  2025-03-14_17-51-파이썬으로-주보-만들기.md  2025-03-17_17-57-untitled.md  2025-03-17_17-57-라우터-코드-로직-분리-및-최적화.md  2025-03-18_08-15-sqlalchemy-model-index-specification.md  2025-03-18_15-38-wysiwyg-editor-for-nextjs-project.md
alembic/: env.py
alembic/versions/: 431f9d3b05fb_date_column_add.py  4e82618631a2_add_column.py  594b635e7881_index_change.py  7a30619dc068_church_code_column_add.py  be0f11e70ec5_is_deleted_change_type_and_is_published_.py  eb64c1930712_add_year_and_month.py
app/: deps.py  main.py
app/api/v1/: api.py
app/core/: config.py
app/db/: base_class.py  session.py
app/db/migrations/: env.py
app/models/: __init__.py  bulletin.py  church.py  user.py
app/routers/: __init__.py  auth.py  bulletins.py  churches.py  templates.py  uploads.py  users.py
app/schemas/: __init__.py  bulletin.py  church.py  user.py
app/services/: __init__.py  auth.py  bulletin.py  church.py  template.py  user.py
app/utils/: __init__.py  auth.py
data/: sample_data.json
docker/postgres/data/: postmaster.pid
scripts/: db_init.sh  start.sh  start_prod.sh
(+36 files in other folders)
